@@ -19,6 +19,10 @@ import db.DBRecord;
 
 public class LongColumnAdapter extends AbstractColumnAdapter {
 
+	LongColumnAdapter(String columnName, int column) {
+		super(columnName, column);
+	}
+
 	@Override
 	Class<?> getValueClass() {
 		return Long.class;
@@ -26,11 +30,16 @@ public class LongColumnAdapter extends AbstractColumnAdapter {
 
 	@Override
 	Object getKeyValue(DBRecord rec) {
-		return new Long(rec.getKey());
+		return Long.valueOf(rec.getKey());
 	}
 
 	@Override
 	Object getValue(DBRecord rec, int col) {
-		return new Long(rec.getLongValue(col));
+		return Long.valueOf(rec.getLongValue(col));
+	}
+
+	@Override
+	public LongRenderer getColumnRenderer() {
+		return longRenderer;
 	}
 }
